[iOS] Do extensive search for microphone devices when trying to capture https://bugs.webkit.org/show_bug.cgi?id=220010 <rdar://problem/72036034>

Reviewed by Eric Carlson.

Source/WebCore:

It is not possible to discover some audio input devices without an active audio
session, so WebKit allocates an auxiliary audio session when it needs to build
a list of audio capture devices. The full list of devices is only needed when
evaluating getUserMedia audio constraints, or for enumerateDevices *after* capture
is active (we return a truncated list before capture is active), so don't activate
the session until we need to validate audio constraints or after the user gives
permission to capture.

Manually tested on device with built-in, BT, and USB audio inputs.

* platform/mediastream/RealtimeMediaSourceFactory.h:
(WebCore::AudioCaptureFactory::addExtensiveObserver):
(WebCore::AudioCaptureFactory::removeExtensiveObserver):
* platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.h:
* platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.mm:
(WebCore::AVAudioSessionCaptureDeviceManager::refreshAudioCaptureDevices):
(WebCore::AVAudioSessionCaptureDeviceManager::enableAllDevicesQuery):
(WebCore::AVAudioSessionCaptureDeviceManager::disableAllDevicesQuery):
* platform/mediastream/ios/CoreAudioCaptureSourceIOS.h:
* platform/mediastream/ios/CoreAudioCaptureSourceIOS.mm:
(WebCore::CoreAudioCaptureSourceFactoryIOS::addExtensiveObserver):
(WebCore::CoreAudioCaptureSourceFactoryIOS::removeExtensiveObserver):
(WebCore::CoreAudioCaptureSourceFactoryIOS::createAudioCaptureSource):
In UIProcess, UserMediaPermissionRequestManagerProxy makes sure to enable the extensive audio device query.
In WebProcess, we also need this when starting the audio capture.
We enable it when there is no observer to handle the WebProcess side.
* platform/mediastream/mac/CoreAudioCaptureSource.h:
(WebCore::CoreAudioCaptureSourceFactory::createAudioCaptureSource):

Source/WebKit:

Enable exhaustive audio device query in case getUserMedia is called for audio capture.
In case the manager is destroyed or reset after some time without capturing, make sure to disable
exhaustive audio device query if no other page need it.

* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::invalidatePendingRequests):
(WebKit::UserMediaPermissionRequestManagerProxy::denyRequest):
(WebKit::UserMediaPermissionRequestManagerProxy::resetAccess):
(WebKit::UserMediaPermissionRequestManagerProxy::startProcessingUserMediaPermissionRequest):
* UIProcess/UserMediaPermissionRequestManagerProxy.h:


Canonical link: https://commits.webkit.org/232646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271049 268f45cc-cd09-0410-ab3c-d52691b4dbfc