Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.mm
@@ -28,6 +28,7 @@
 
 #if ENABLE(MEDIA_STREAM) && PLATFORM(IOS_FAMILY)
 
+#import "AVAudioSessionCaptureDeviceManager.h"
 #import "Logging.h"
 #import <AVFoundation/AVAudioSession.h>
 #import <wtf/MainThread.h>
@@ -100,6 +101,28 @@ CoreAudioCaptureSourceFactory& CoreAudioCaptureSourceFactory::singleton()
 {
     static NeverDestroyed<CoreAudioCaptureSourceFactoryIOS> factory;
     return factory.get();
+}
+
+void CoreAudioCaptureSourceFactoryIOS::addExtensiveObserver(ExtensiveObserver& observer)
+{
+    m_observers.add(observer);
+    AVAudioSessionCaptureDeviceManager::singleton().enableAllDevicesQuery();
+}
+
+void CoreAudioCaptureSourceFactoryIOS::removeExtensiveObserver(ExtensiveObserver& observer)
+{
+    m_observers.remove(observer);
+    if (m_observers.computesEmpty())
+        AVAudioSessionCaptureDeviceManager::singleton().disableAllDevicesQuery();
+}
+
+CaptureSourceOrError CoreAudioCaptureSourceFactoryIOS::createAudioCaptureSource(const CaptureDevice& device, String&& hashSalt, const MediaConstraints* constraints)
+{
+    // We enable exhaustive query to be sure to start capture with the right device.
+    // FIXME: We should stop the auxiliary session after starting capture.
+    if (m_observers.computesEmpty())
+        AVAudioSessionCaptureDeviceManager::singleton().enableAllDevicesQuery();
+    return CoreAudioCaptureSource::create(String { device.persistentId() }, WTFMove(hashSalt), constraints);
 }
 
 }
